Fix Sonar and OSS Index CI regressions
Co-Authored-By: Codex with GPT-5 <codex@openai.com>